--- a/static/style.css
+++ b/static/style.css
@@ -3,28 +3,69 @@
     src: url("KoHo-Medium.ttf");
 }
 body {
-    background: black;
-    color: #ddd;
+    background: #fee;
+    color: #000;
     font-family: KoHo;
     font-size: 14pt;
+    padding: 0;
+    margin: 0;
+}
+a, a:visited {
+    text-decoration: none;
+}
+header {
+    background: black;
+    padding: 5pt 5pt;
+    margin-bottom: 20pt;
+}
+header .content {
+    width: 80ch;
+    margin: 0 auto;
+}
+header .logo {
+    width: 24pt;
+    height: 24pt;
+    border-radius: 0;
+}
+header .header {
+    font-size: 32pt;
+    color: #37c837;
+}
+header .menu {
+    padding-left: 20pt;
+    font-size: 120%;
+}
+header .menu .right {
+    float: right;
+}
+header .menu a {
+    padding-left: 10pt;
+    color: #99f;
+    color: white;
+    font-weight: bold;
+}
+header .menu .rss {
+    height: 14pt;
+    width: 14pt;
+    border-radius: 0;
 }
 article {
+}
+article .content {
     max-width: 80ch;
+    margin: 0 auto;
 }
 article ul {
     text-align: left;
     display: inline-block;
 }
-a, a:visited {
-    color: #99f;
+article a, article a:visited {
+    color: #00f;
     text-decoration: none;
-}
-h1 {
-    color: #f90;
 }
 img {
     max-width: 100%;
-    border-radius: 12pt;
+    border-radius: 4pt;
 }
 table, td, tr {
     border-collapse: collapse;
