--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
     {{ with site.GetPage "intro" }}
+        <h1>{{ .Title }}</h1>
         {{ .Content }}
     {{ end }}
 {{ end }}
