and fixed home page link

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div class="content">
-                <a href="index.html">
+                <a href="{{ "/" | relURL }}">
                     <img class="logo" src="{{ "logo.png" | relURL }}" />
                     <span class="header">PsyLink</span>
                 </a>
