--- a/static/style.css
+++ b/static/style.css
@@ -96,3 +96,9 @@ img {
 table, td, tr {
     border-collapse: collapse;
 }
+.showcase {
+    max-width: 35ch;
+    display: inline-block;
+    vertical-align: top;
+    padding: 0 10pt;
+}
