--- a/layouts/circuits/list.html
+++ b/layouts/circuits/list.html
@@ -12,19 +12,19 @@
             <div class="showcase">
                 <a href="{{ .RelPermalink }}{{ partial "index" }}">
                     <h2>{{.Title}}</h2>
-                    <img src="{{ printf "img/%s" .Params.image | relURL }}" /><br />
-                </a>
-                {{ with .Params.components }}
-                    Components:
-                    {{ range . }}
-                        <a href="{{ . | relURL }}/{{ partial "index" }}">{{ . }}</a>
+                    {{ if .Params.thumb }}
+                        <img src="{{ printf "img/%s" .Params.thumb | relURL }}" /><br />
+                    {{ else }}
+                        <img src="{{ printf "img/%s" .Params.image | relURL }}" /><br />
                     {{ end }}
-                    <br />
-                {{ end }}
+                </a>
                 {{ with .Params.blog }}
                     {{ range first 1 (where $.Site.RegularPages "Slug" "eq" .) }}
                         Blog Post: <a href="{{ .RelPermalink }}{{ partial "index" }}">{{ .Title }}</a><br />
                     {{ end }}
+                {{ end }}
+                {{ with .Params.src }}
+                    <a href="{{ . }}">Eeschema file</a> (for <a href="https://www.kicad.org/">KiCad</a>)<br />
                 {{ end }}
                 Date: {{ .Date.Format "2006-01-02" }}
             </div>
