add boards & textiles

--- a/layouts/textiles/list.html
+++ b/layouts/textiles/list.html
@@ -14,20 +14,18 @@
                     <h2>{{.Title}}</h2>
                     <img src="{{ printf "img/%s" .Params.image | relURL }}" /><br />
                 </a>
-                {{ with .Params.components }}
-                    Components:
-                    {{ range $i, $e := . -}}
-                        {{- if $i }} + {{ end }}
-                        <a href="{{ . | relURL }}/{{ partial "index" }}">{{ . }}</a>
-                    {{- end }}
-                    <br />
+                {{ with .Params.src }}
+                    <a href="{{ . }}">Sewing Pattern</a><br />
+                {{ end }}
+                {{ if not .Params.src }}
+                    No sewing pattern available. If you need one, please contact the author.<br />
                 {{ end }}
                 {{ with .Params.blog }}
                     {{ range first 1 (where $.Site.RegularPages "Slug" "eq" .) }}
-                        Blog Post: <a href="{{ .RelPermalink }}{{ partial "index" }}">{{ .Title }}</a><br />
+                        <b>Blog Post:</b> <a href="{{ .RelPermalink }}{{ partial "index" }}">{{ .Title }}</a><br />
                     {{ end }}
                 {{ end }}
-                Date: {{ .Date.Format "2006-01-02" }}
+                <b>Date:</b> {{ .Date.Format "2006-01-02" }}
             </div>
         {{ end }}
     </main>
