--- a/static/style.css
+++ b/static/style.css
@@ -78,7 +78,7 @@ nav .rss {
 /* CONTENT */
 #content-center {
     max-width: 80ch;
-    padding: 0 1ch;
+    padding: 0 1ch 3em 1ch;
     margin: 0 auto;
 }
 #content a, #content a:visited {
