--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -33,10 +33,8 @@
                 </nav>
             </div>
         </header>
-        <div id="content">
-            <div id="content-center">
-                {{ block "main" . }}{{ end }}
-            </div>
-        </div>
+        <main>
+            {{ block "main" . }}{{ end }}
+        </main>
     </body>
 </html>
