--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 :root {
     --logo-fg: #37c837;
-    --body-bg: url("bg.png");
+    --body-bg: url("bg.png"), black;
     --main-border: #386638;
     --main-bg: #131418;
     --main-fg: #ccc;
