--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,9 +2,16 @@
     {{ $blogchain := (and (in .Site.Params.blogchains .Section) .Section (.Site.GetPage "section" .Section)) }}
     <h1>{{ .Title }}</h1>
     {{ .Content }}
-    {{ if or .Date .Params.Author .Params.Tags $blogchain }}
+    {{ if or .Date .Params.Author .Params.Tags .PrevInSection .NextInSection }}
         <hr />
         <ul>
+            {{ with .NextInSection }}
+                <li>Next: <a href="{{.RelPermalink}}{{ partial "index" }}">{{.Title}}</a></li>
+            {{ end }}
+            {{ with .PrevInSection }}
+                <li>Previous: <a href="{{.RelPermalink}}{{ partial "index" }}">{{.Title}}</a></li>
+            {{ end }}
+                <li>View <a href="{{ (site.GetPage "allposts").RelPermalink }}{{ partial "index" }}">all posts on a single page</a></li>
             {{ if .Date }}
                 <li>Date: {{ .Date.Format .Site.Params.dateFmt }}</li>
             {{ end }}
