--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,7 +17,7 @@
                     <span class="header">PsyLink</span>
                 </a>
                 <nav>
-                    <a href="{{ "devlog" | relURL }}/{{ partial "index" }}">Blog</a>
+                    <a href="{{ "blog" | relURL }}/{{ partial "index" }}">Blog</a>
                     <a href="{{ "prototypes" | relURL }}/{{ partial "index" }}">Prototypes</a>
                     <span class="parts">
                         Components
