--- a/layouts/shortcodes/allposts.html
+++ b/layouts/shortcodes/allposts.html
@@ -1,5 +1,5 @@
-{{ $intro := site.GetPage "devlog/intro.md" }}
-{{ $pages := (where $.Site.RegularPages "Section" "eq" "devlog").Reverse }}
+{{ $intro := site.GetPage "blog/intro.md" }}
+{{ $pages := (where $.Site.RegularPages "Section" "eq" "blog").Reverse }}
 <h1>Table of contents</h1>
 <ul>
 <li><a href="#_intro">{{ $intro.Title }}</a>
