--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,7 +11,7 @@
             {{ with .PrevInSection }}
                 <li>Previous: <a href="{{.RelPermalink}}{{ partial "index" }}">{{.Title}}</a></li>
             {{ end }}
-                <li>View <a href="{{ (site.GetPage "allposts").RelPermalink }}{{ partial "index" }}">all posts on a single page</a></li>
+                <li>View <a href="{{ (site.GetPage "blog/all").RelPermalink }}{{ partial "index" }}">all posts on a single page</a></li>
             {{ if .Date }}
                 <li>Date: {{ .Date.Format .Site.Params.dateFmt }}</li>
             {{ end }}
