update links from codeberg.org/hut/psylink to psylink/psylink

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,7 +28,7 @@
                             <a href="{{ "software" | relURL }}/{{ partial "index" }}">Software</a><br />
                         </div>
                     </span>
-                    <a href="https://codeberg.org/hut/psylink">Source</a>
+                    <a href="https://codeberg.org/psylink/psylink">Source</a>
                     <a href="index.xml"><img src="{{ "feed-icon.png" | relURL }}" class="rss" /></a>
                 </nav>
             </div>
