--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,7 +29,7 @@
                         </div>
                     </span>
                     <a href="https://codeberg.org/psylink/psylink">Source</a>
-                    <a href="index.xml"><img src="{{ "feed-icon.png" | relURL }}" class="rss" /></a>
+                    <a href="/index.xml"><img src="{{ "feed-icon.png" | relURL }}" class="rss" /></a>
                 </nav>
             </div>
         </header>
