--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,14 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="og:title" property="og:title" content="PsyLink">
         <meta name="description" content='A makeshift neural interface'>
-        <link rel="shortcut icon" type="image/png" href="{{ "logo.png" | relURL }}">
+        <link rel="shortcut icon" type="image/png" href="{{ "favicon.ico" | relURL }}">
         <link rel="stylesheet" href="{{ "style.css" | relURL }}" type="text/css" />
     </head>
     <body>
         <header>
             <div class="content">
                 <a href="{{ "/" | relURL }}{{ partial "index" }}">
-                    <img class="logo" src="{{ "logo.png" | relURL }}" />
+                    <img class="logo" src="{{ "favicon.ico" | relURL }}" />
                     <span class="header">PsyLink</span>
                 </a>
                 <nav>
