refactor component layouts

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,17 +6,23 @@
     </div>
     {{ end }}
 
-    <ul>
-        {{ range .Pages }}
-        <li>
-            <div class="post-title">
-            {{ if eq .Section "blog" }}
-                <a href="{{ .RelPermalink }}{{ partial "index" }}">{{ .Date.Format "2006-01-02" }}: {{.Title }}</a>
-            {{ else }}
-            <a href="{{ .RelPermalink }}{{ partial "index" }}">{{.Title }}</a>
+    {{ if eq .Section "blog" }}
+        <ul>
+            {{ range .Pages }}
+            <li>
+                <div class="post-title">
+                {{ if eq .Section "blog" }}
+                    <a href="{{ .RelPermalink }}{{ partial "index" }}">{{ .Date.Format "2006-01-02" }}: {{.Title }}</a>
+                {{ else }}
+                <a href="{{ .RelPermalink }}{{ partial "index" }}">{{.Title }}</a>
+                {{ end }}
+                </div>
+            </li>
             {{ end }}
-            </div>
-        </li>
+        </ul>
+    {{ else }}
+        {{ range .Pages }}
+            {{ partial "component_list" . }}
         {{ end }}
-    </ul>
+    {{ end }}
 {{ end }}
