brighter shadow around main column

--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 :root {
     --logo-fg: #37c837;
     --body-bg: url("bg.png"), black;
-    --main-border: #030;
+    --main-border: #004c00;
     --main-bg: #131418;
     --main-fg: #ccc;
     --main-link: #8af;
