--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
     <h1>{{ .Title }}</h1>
-    <img src="{{ printf "img/%s" .Params.image | relURL }}" />
+    {{ with .Params.image }}
+        <img src="{{ printf "img/%s" . | relURL }}" />
+    {{ end }}
     <br /><br />
     {{ .Content }}
     <hr />
