--- a/static/style.css
+++ b/static/style.css
@@ -137,7 +137,7 @@ table, td, tr {
     border-collapse: collapse;
 }
 .showcase {
-    max-width: 35ch;
+    width: 35ch;
     display: inline-block;
     vertical-align: top;
     padding: 0 10pt;
