--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -1,5 +1,5 @@
 {{ $params := ($.Site.GetPage .Section).Params }}
-{{ if .Params.untested }}
+{{ if not .Params.tested }}
 <li><b class="warning">WARNING: NOT FULLY TESTED</b></li>
 {{ end }}
 {{ if .Params.broken }}
