Revert "widen showcase divs to fixed 35ch"
This broke component pages on mobile.

This reverts commit ca04a56d640eaa1ba5e99124dbdebb5116098c27.

--- a/static/style.css
+++ b/static/style.css
@@ -137,7 +137,7 @@ table, td, tr {
     border-collapse: collapse;
 }
 .showcase {
-    width: 35ch;
+    max-width: 35ch;
     display: inline-block;
     vertical-align: top;
     padding: 0 10pt;
