--- a/static/style.css
+++ b/static/style.css
@@ -119,11 +119,18 @@ main .banner {
 main h1 {
     margin-top: 0;
     padding-top: 14pt;
+    color: white;
     font-size: 150%;
 }
 main h2 {
-    font-size: 120%;
+    font-size: 125%;
+    color: white;
     text-decoration: underline;
+}
+main h3 {
+    font-size: 100%;
+    text-decoration: underline;
+    font-weight: normal;
 }
 main a, main a:visited {
     color: var(--main-link);
