implement table of contents

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,11 @@
 {{ define "main" }}
     <h1>{{ .Title }}</h1>
+    {{ if .Params.toc }}
+        <aside id="ToC">
+            <span class="title">Contents:</span>
+            {{ .TableOfContents }}
+        </aside>
+    {{ end }}
     {{ with .Params.image }}
         <img src="{{ printf "img/%s" . | relURL }}" />
         <br /><br />
