add .Params.wip to mark work-in-progress prototypes

--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -1,9 +1,12 @@
 {{ $params := ($.Site.GetPage .Section).Params }}
-{{ if not .Params.tested }}
-<li><b class="warning">WARNING: NOT FULLY TESTED</b></li>
+{{ if .Params.wip }}
+<li><b class="warning">Work in progress. Expect changes.</b></li>
 {{ end }}
 {{ if .Params.broken }}
 <li><b class="warning">WARNING: This {{ default "item" $params.child_label }} contains a bug and will not funciton.</b></li>
+{{ end }}
+{{ if not .Params.tested }}
+<li><b class="warning">WARNING: NOT FULLY TESTED</b></li>
 {{ end }}
 {{ with .Params.blog }}
     {{ range first 1 (where $.Site.RegularPages "Slug" "eq" .) }}
